This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.1
  Bugfix: Could not open project file that contains an ampersand 
    character in folder names (#2372000)
  Bugfix: File compare method "Modified Date and Size" ignored file size
    (#2455595)
  BugFix: Quick compare didn't ignore EOL differences (#2433677)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Remove EOL characters from command line (#2458728)
  Bugfix: Merging one line diff to empty other side didn't work (#2456399)
  Translation updates:
  - Brazilian (#2461443)
  - Czech (r6201)
  - Swedish (#2452467, #2465385)

WinMerge 2.12.x (R2_12) branch created (r6202)

WinMerge 2.11.1.8 - 2008-12-19 (r6200)
  Allow reloading the file if it has been changed on the disk
    behind WinMerge (#2354125)
  Add option to show Open-dialog on WinMerge startup (#2327424)
  Add Git to Source Control filter and fix ignore file rules (#2329381)
  Add build identifier for 64-bit builds to About-dialog (r6142)
  Installer: Option to add WinMerge to system path (#2435175)
  Add Unicode version of heksedit (#2036603)
  Allow multiple file compare documents by default (#2445749)
  Bugfix: Move confirmation dialog sometimes had wrong paths (#2327565, #2309190)
  Bugfix: Use translated version of readme.txt for Chinese Simplified (#2391000)
  Bugfix: Installer didn't install readme.txt for all translations (#2396437)
  Bugfix: Infinite loop in heksedit's Replace-dialog (r6176)
  Bugfix: Could not give paths to commandline when started WinMerge
    from Cygwin prompt (#2427946)
  Translation updates:
  - Croatian (#2390558)
  - German (r6130)
  - Greek (#2379356)
  - Japanese (r6154)
  - Swedish (#2318778, #2374278)

WinMerge 2.11.1.7 - 2008-11-20 (r6112)